--- a/demo.html
+++ b/demo.html
@@ -18,12 +18,15 @@
             <li>6</li>
             <li>7</li>
             <li>8</li>
-            <li>9</li>
+            <!--<li>9</li>
             <li>10</li>
-            <li>11</li>
+            <li>11</li>-->
         </ul>
-
+        <a class="control pre" href="javascript:;">&lt;</a>
+        <a class="control next" href="javascript:;">&gt;</a>
     </div>
 </div>
+<script src="./static/js/jquery-1.11.2.min.js"></script>
+<script src="./static/js/rollSlide.js"></script>
 </body>
 </html>
