--- a/demo.html
+++ b/demo.html
@@ -74,10 +74,10 @@
 <script src="./static/js/jquery-1.11.2.min.js"></script>
 <script src="./static/js/rollSlide.js"></script>
 <script>
-    $('#a').rollSlide({
+    /*$('#a').rollSlide({
         orientation: 'left',
         num: 4,
-        v: 1500,
+        v: 1000,
         space: 3000,
         isRoll: true
     });
@@ -91,7 +91,8 @@
     $('#c').rollSlide({
         orientation: 'top',
         num: 1,
-        v: 1000,
+        v: 500,
+        //space: 500,
         isRoll: true
     });
     $('#d').rollSlide({
@@ -100,7 +101,7 @@
         v: 1500,
         space: 1000,
         isRoll: true
-    });
+    });*/
 </script>
 </body>
 </html>
