--- a/demo.html
+++ b/demo.html
@@ -9,9 +9,9 @@
 <div class="container">
     <p>左右滚动</p>
     <div class="roll-wrap roll_row" id="a">
-        <ul class="roll__list">
+        <ul class="roll__list" style="position: absolute; left: 0; top: 0;">
             <li>1</li>
-            <li>2</li>
+            <li style="width: 200px;">2</li>
             <li>3</li>
             <li>4</li>
             <li>5</li>
@@ -27,7 +27,7 @@
     </div>
     <p>左右自动滚动</p>
     <div class="roll-wrap roll_row" id="b">
-        <ul class="roll__list">
+        <ul class="roll__list" style="position: absolute; left: 0; top: 0;">
             <li>1</li>
             <li>2</li>
             <li>3</li>
@@ -45,7 +45,7 @@
     </div>
     <p>上下滚动</p>
     <div class="roll-wrap roll_col" id="c">
-        <ul class="roll__list">
+        <ul class="roll__list" style="position: absolute; left: 0; top: 0;">
             <li class="li-1">1</li>
             <li class="li-2">2</li>
             <li class="li-3">3</li>
@@ -56,7 +56,7 @@
     </div>
     <p>上下自动滚动</p>
     <div class="roll-wrap roll_col h600" id="d">
-        <ul class="roll__list">
+        <ul class="roll__list" style="position: absolute; left: 0; top: 0;">
             <li class="li-1">1</li>
             <li class="li-2">2</li>
             <li class="li-3">3</li>
@@ -70,11 +70,57 @@
         <a class="control pre" href="javascript:;">&lt;</a>
         <a class="control next" href="javascript:;">&gt;</a>
     </div>
+    <p>不间断向左滚动</p>
+    <div class="roll-wrap roll_row" id="e">
+        <ul class="roll__list" style="position: absolute; left: 0; top: 0;">
+            <li>1</li>
+            <li style="width: 200px;">2</li>
+            <li>3</li>
+            <li style="width: 400px;">4</li>
+            <li>5</li>
+            <li>6</li>
+            <li>7</li>
+            <li>8</li>
+            <li>9</li>
+        </ul>
+    </div>
+    <p>不间断向右滚动</p>
+    <div class="roll-wrap roll_row" id="f">
+        <ul class="roll__list" style="position: absolute; right: 0; top: 0; width: 1480px">
+            <li>1</li>
+            <li style="width: 200px;">2</li>
+            <li>3</li>
+            <li style="width: 400px;">4</li>
+            <li>5</li>
+            <li>6</li>
+            <li>7</li>
+            <li>8</li>
+            <li>9</li>
+        </ul>
+    </div>
+    <p>不间断向上滚动</p>
+    <div class="roll-wrap roll_col" id="g">
+        <ul class="roll__list" style="position: absolute; left: 0; top: 0;">
+            <li class="li-1">1</li>
+            <li class="li-2">2</li>
+            <li class="li-3">3</li>
+            <li class="li-4">4</li>
+        </ul>
+    </div>
+    <p>不间断向下滚动</p>
+    <div class="roll-wrap roll_col" id="h">
+        <ul class="roll__list" style="position: absolute; left: 0; bottom: 0;">
+            <li class="li-1">1</li>
+            <li class="li-2">2</li>
+            <li class="li-3">3</li>
+            <li class="li-4">4</li>
+        </ul>
+    </div>
 </div>
 <script src="./static/js/jquery-1.11.2.min.js"></script>
 <script src="./static/js/rollSlide.js"></script>
 <script>
-    /*$('#a').rollSlide({
+    $('#a').rollSlide({
         orientation: 'left',
         num: 4,
         v: 1000,
@@ -101,7 +147,11 @@
         v: 1500,
         space: 1000,
         isRoll: true
-    });*/
+    });
+    $('#e').rollNoInterval().left();
+    $('#f').rollNoInterval().right();
+    $('#g').rollNoInterval().top();
+    $('#h').rollNoInterval().bottom();
 </script>
 </body>
 </html>
